--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,7 @@
 
 @import "scss/tools/tools.button-bare";
 @import "scss/tools/tools.clearfix";
+@import "scss/tools/tools.focus-outline";
 @import "scss/tools/tools.media-queries";
 @import "scss/tools/tools.transforms";
 @import "scss/tools/tools.animations";
