--- a/scss/components/_components.buttons.scss
+++ b/scss/components/_components.buttons.scss
@@ -55,7 +55,7 @@
 	box-shadow: 0 1px 0 darken($color-primary, 10%);
 
 	&:focus {
-		box-shadow: inset 0 0 0 1px #fff, 0 0 0 2px $color-primary;
+		@include focus-outline(true);
 	}
 
 	&:hover {
@@ -70,7 +70,7 @@
 	box-shadow: 0 1px 0 darken($color-error, 10%);
 
 	&:focus {
-		box-shadow: inset 0 0 0 1px #fff, 0 0 0 2px $color-primary;
+		@include focus-outline(true);
 	}
 
 	&:hover {
