--- a/scss/components/_components.pagination.scss
+++ b/scss/components/_components.pagination.scss
@@ -25,7 +25,7 @@
 	padding: 6px 10px;
 
 	&:focus {
-		box-shadow: inset 0 0 0 1px #fff, 0 0 0 2px $color-primary;
+		@include focus-outline(true);
 	}
 
 	&:hover {
