--- a/scss/elements/_elements.links.scss
+++ b/scss/elements/_elements.links.scss
@@ -6,8 +6,7 @@ a {
 	text-decoration: underline;
 
 	&:focus {
-		outline: none;
-		box-shadow: 0 0 0 2px currentColor;
+		@include focus-outline();
 	}
 
 	&:hover {
