--- a/scss/objects/_objects.containers.scss
+++ b/scss/objects/_objects.containers.scss
@@ -17,6 +17,10 @@
 
 .o-container--grey {
 	background-color: $grey-faint;
+}
+
+.o-container--code {
+	background-color: $grey-faint;
 	border: 1px solid $color-border--light;
 	border-radius: $border-radius;
 
