--- a/style.scss
+++ b/style.scss
@@ -59,6 +59,7 @@
 
 @import "scss/components/components.alerts";
 @import "scss/components/components.buttons";
+@import "scss/components/components.card";
 @import "scss/components/components.dropdown";
 @import "scss/components/components.headers";
 @import "scss/components/components.inputs";
@@ -79,6 +80,7 @@
 @import "scss/utilities/utilities.accessibility";
 @import "scss/utilities/utilities.borders";
 @import "scss/utilities/utilities.clearfix";
+@import "scss/utilities/utilities.flex";
 @import "scss/utilities/utilities.positioning";
 @import "scss/utilities/utilities.spacing";
 @import "scss/utilities/utilities.text";
