--- a/scss/objects/_objects.grid.scss
+++ b/scss/objects/_objects.grid.scss
@@ -20,6 +20,13 @@
 	}
 }
 
+.o-row--no-gutters {
+	.o-col {
+		padding-left: 0;
+		padding-right: 0;
+	}
+}
+
 .o-col {
 	width: 100%;
 	padding-left: $gutter;
