Added project list and project empty state

--- a/scss/utilities/_utilities.flex.scss
+++ b/scss/utilities/_utilities.flex.scss
@@ -8,3 +8,7 @@
 .u-align-items-center {
 	align-items: center !important;
 }
+
+.u-justify-content-center {
+	justify-content: center !important;
+}
