--- a/scss/components/_components.buttons.scss
+++ b/scss/components/_components.buttons.scss
@@ -165,9 +165,43 @@
 // Group buttons together and space them accordingly
 
 .c-button-bar {
+	.c-button-group,
 	.c-button {
+		margin-right: 6px;
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+
+
+
+// ## Button Group
+// -----------------------------------------------------------------------------
+
+// Merge a group of buttons together into a single unit
+
+.c-button-group {
+	display: flex;
+	flex-wrap: nowrap;
+
+	.c-button {
+		margin-right: 0;
+		border-radius: 0;
+
 		&:not(:last-child) {
-			margin-right: 6px;
+			border-right: 1px solid $grey-medium;
+		}
+
+		&:first-child {
+			border-top-left-radius: $border-radius;
+			border-bottom-left-radius: $border-radius;
+		}
+
+		&:last-child {
+			border-top-right-radius: $border-radius;
+			border-bottom-right-radius: $border-radius;
 		}
 	}
 }
