--- a/scss/settings/_settings.variables.scss
+++ b/scss/settings/_settings.variables.scss
@@ -7,6 +7,7 @@
 // Colors
 $grey-faint:                        #f2f2f2; // 95%
 $grey-light:                        #e5e5e5; // 90%
+$grey-medium:                       #d8d8d8; // 80%
 $grey:                              #bfbfbf; // 75%
 $grey-dark:                         #4d4d4d; // 30%
 
